--- a/IndexedDB/idbindex_getKey5.htm
+++ b/IndexedDB/idbindex_getKey5.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>IDBIndex.getKey() - throw DataError </title>
+<title>IDBIndex.getKey() - throw DataError when using invalid key </title>
 <link rel="author" title="Intel" href="http://www.intel.com">
 <link rel="help" href="https://dvcs.w3.org/hg/IndexedDB/raw-file/tip/Overview.html#widl-IDBIndex-getKey-IDBRequest-any-key">
 <script src="/resources/testharness.js"></script>
@@ -14,10 +14,11 @@
     var open_rq = createdb(t);
     open_rq.onupgradeneeded = function(e) {
         db = e.target.result;
+
+        var index = db.createObjectStore("test", { keyPath: "key" })
+                      .createIndex("index", "indexedProperty");
         assert_throws("DataError",function(){
-            db.createObjectStore("test", { keyPath: "key" })
-                .createIndex("index", "indexedProperty")
-                .getKey(NaN);
+            index.getKey(NaN);
         });
         t.done();
     };
