--- a/IndexedDB/idbindex_getKey7.htm
+++ b/IndexedDB/idbindex_getKey7.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>IDBIndex.getKey() - throw TransactionInactiveError </title>
+<title>IDBIndex.getKey() - throw TransactionInactiveError on aborted transaction</title>
 <link rel="author" title="Intel" href="http://www.intel.com">
 <link rel="help" href="https://dvcs.w3.org/hg/IndexedDB/raw-file/tip/Overview.html#widl-IDBIndex-getKey-IDBRequest-any-key">
 <script src=/resources/testharness.js></script>
